--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eyes": "0.1.7",
     "flatiron": "0.3.5",
     "forever-monitor": "1.1.0",
+    "request-json": "= 0.4.4",
     "haibu-api": "0.9.0",
     "cozy-controller-carapace": "0.7.4",
     "npm": "1.2.20",
