add set TEST_ENV env variable to Travis in travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
 env:
     global:
         - NODE_ENV=test
+        - TEST_ENV=travis
 
 before_install:
     # make sudoer use same PATH than default user (includes npm & node)
