--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "cozy-controller",
-  "description": "Module used to start and stop application in Cozy",
   "version": "0.12.4",
-  "author": "Cozy Cloud",
-  "maintainers": [
-    "poupotte <zoe@cozycloud.cc>",
-    "frankrousseau <frank@cozycloud.cc>"
+  "description": "Module used to install, update and remove applications in the Cozy Platform.",
+  "author": "Cozy Cloud <contact@cozycloud.cc> (http://cozycloud.cc)",
+  "licenses": [
+    {
+      "type": "AGPL v3",
+      "url": "http://www.gnu.org/licenses/agpl-3.0.html"
+    }
   ],
+  "engines": {
+    "node": ">= 0.8.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/mycozycloud/cozy-controller.git"
@@ -14,7 +19,10 @@
   "keywords": [
     "cloud computing",
     "automated deployment",
-    "platform-as-a-service"
+    "platform-as-a-service",
+    "paas",
+    "cloud",
+    "personal"
   ],
   "dependencies": {
     "cloudfiles": "0.3.3",
@@ -43,8 +51,5 @@
   },
   "scripts": {
     "test": "vows test/*/*-test.js --isolate --spec"
-  },
-  "engines": {
-    "node": ">= 0.8.0"
   }
 }
